--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -72,10 +72,6 @@
       font-size: 1.2em !important;
     }
 
-    .photo {
-      height: 312px !important;
-    }
-
     .modal {
       z-index: 300000 !important;
     }
@@ -124,7 +120,7 @@ and (orientation: portrait) {
   }
 
   #contacts {
-    margin-top: 60px !important;
+    margin-top: 30% !important;
   }
 
 }
@@ -140,6 +136,10 @@ and (orientation: portrait) {
 
     header h1 {
       font-size: 1.50em;
+    }
+
+    .photo {
+      top: 50px;
     }
 
     header ul {
@@ -160,7 +160,7 @@ and (orientation: portrait) {
     }
 
     #contacts {
-      margin-top: 60px !important;
+      margin-top: 25% !important;
     }
 }
 
@@ -177,16 +177,15 @@ and (orientation: portrait) {
     margin-top: 25px !important;
   }
 
+  .photo {
+    top: 65px;
+  }
+
   .see-all {
     font-size: 1em !important;
   }
 
   #contacts {
-    margin-top: 20px !important;
-  }
-
-  .photo {
-    position: absolute;
-    margin-top: -285px !important;
+    margin-top: 20% !important;
   }
 }
